crates/pg_syntax/tests/snapshots/postgres_regress/int8@29.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM INT8_TBL WHERE q2 < '456'::int2;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "INT8_TBL"
  Whitespace@22..23 " "
  Where@23..28 "WHERE"
  Whitespace@28..29 " "
  AExpr@29..45
    ColumnRef@29..31
      Ident@29..31 "q2"
    Whitespace@31..32 " "
    Ascii60@32..33 "<"
    Whitespace@33..34 " "
    TypeCast@34..45
      AConst@34..39
        Sconst@34..39 "'456'"
      Typecast@39..41 "::"
      TypeName@41..45
        Ident@41..45 "int2"
  Ascii59@45..46 ";"

