crates/pg_syntax/tests/snapshots/postgres_regress/int8@3.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "INSERT INTO INT8_TBL(q1) VALUES ('3908203590239580293850293850329485');"
---
InsertStmt@0..71
  Insert@0..6 "INSERT"
  Whitespace@6..7 " "
  Into@7..11 "INTO"
  Whitespace@11..12 " "
  RangeVar@12..20
    Ident@12..20 "INT8_TBL"
  Ascii40@20..21 "("
  ResTarget@21..23
    Ident@21..23 "q1"
  Ascii41@23..24 ")"
  Whitespace@24..25 " "
  SelectStmt@25..69
    Values@25..31 "VALUES"
    Whitespace@31..32 " "
    Ascii40@32..33 "("
    List@33..69
      AConst@33..69
        Sconst@33..69 "'39082035902395802938 ..."
  Ascii41@69..70 ")"
  Ascii59@70..71 ";"

