crates/pg_syntax/tests/snapshots/postgres_regress/int8@36.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT * FROM INT8_TBL WHERE '123'::int2 > q1;"
---
SelectStmt@0..46
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..8
    ColumnRef@7..8
      AStar@7..8
        Ascii42@7..8 "*"
  Whitespace@8..9 " "
  From@9..13 "FROM"
  Whitespace@13..14 " "
  RangeVar@14..22
    Ident@14..22 "INT8_TBL"
  Whitespace@22..23 " "
  Where@23..28 "WHERE"
  Whitespace@28..29 " "
  AExpr@29..45
    TypeCast@29..40
      AConst@29..34
        Sconst@29..34 "'123'"
      Typecast@34..36 "::"
      TypeName@36..40
        Ident@36..40 "int2"
    Whitespace@40..41 " "
    Ascii62@41..42 ">"
    Whitespace@42..43 " "
    ColumnRef@43..45
      Ident@43..45 "q1"
  Ascii59@45..46 ";"

